namespace Abstract_Factory
{
  public interface ICheckbox
  {
    void Paint();
  }
}