namespace Abstract_Factory
{
  public interface IButton
  {
    void Paint();
  }
}